example-rules/ingress-1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
  namespace: default
spec:
  rules:
  - host: test.kaper.com
    http:
      paths:
      - backend:
          service:
            name: idp
            port:
              number: 9999
        path: /idp
        pathType: ImplementationSpecific
      - backend:
          service:
            name: some-nginx-1
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
