example-rules/ingress-2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: test.kaper.com
    http:
      paths:
      - backend:
          service:
            name: some-nginx-2
            port:
              number: 8080
        path: /route-2(/dummy/|/|$)(.*)
        pathType: ImplementationSpecific
