example-rules/ingress-3.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-3
  namespace: default
spec:
  rules:
  - host: test.kaper.com
    http:
      paths:
      - backend:
          service:
            name: some-nginx-4
            port:
              number: 8080
        path: /route-3
        pathType: ImplementationSpecific
  - host: test2.kaper.com
    http:
      paths:
      - backend:
          service:
            name: some-nginx-4
            port:
              number: 8080
        path: /route-4
        pathType: ImplementationSpecific
      - backend:
          service:
            name: some-nginx-10
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
