example-rules/ingress-4.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-4
  namespace: default
spec:
  rules:
  - host: test.kaper.com
    http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 80
        path: /echo
        pathType: ImplementationSpecific
      - backend:
          service:
            name: echo
            port:
              number: 80
        path: /echo/test
        pathType: ImplementationSpecific
