example-rules/ingress-5.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-5
  namespace: other-ns
spec:
  rules:
  - host: test.kaper.com
    http:
      paths:
      - backend:
          service:
            name: echo-4
            port:
              name: http
        path: /echo/other
        pathType: ImplementationSpecific
      - backend:
          service:
            name: echo-5
            port:
              number: 80
        path: /echo/test/other
        pathType: ImplementationSpecific
