example-rules/ingress-6.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-6
  namespace: other-ns
spec:
  rules:
  - host: test2.kaper.com
    http:
      paths:
      - backend:
          service:
            name: some-nginx-4b
            port:
              number: 8080
        path: /route-3
        pathType: ImplementationSpecific
